infra/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cow
  name: cow
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cow
  template:
    metadata:
      labels:
        app: cow
    spec:
      restartPolicy: Always
      containers:
      - image: s1dequest/cow:latest
        imagePullPolicy: Always
        name: cow
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          # requests:
          #   cpu: "1.0"
          #   memory: "1G"
          limits:
            cpu: "1.0"
            memory: "1G"
