infra/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: cow
  name: cow
  namespace: default
spec:
  selector:
    app: cow
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
