infra/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: cow-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
